--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,16 @@ Source: com.github.matfantinel.moneta
 Section: x11
 Priority: extra
 Maintainer: Matheus Fantinel <matfantinel@gmail.com>
-Build-Depends: cmake (>= 2.8),
+Build-Depends: meson,
                debhelper (>= 9),
                libgtk-3-dev,
-               libsqlite3-dev,
                libgranite-dev,
-               libgee-0.8-dev,
-               meson,
-               valac (>= 0.40.0)
+               valac (>= 0.26),
+               libsoup2.4-dev,
+               libjson-glib-dev
 Standards-Version: 4.1.1
 
 Package: com.github.matfantinel.moneta
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: Don't forget about your stuff in an adorably annoying way.
+Description: Follow currency rates easily from your desktop.
