--- a/data/com.github.matfantinel.moneta.appdata.xml.in
+++ b/data/com.github.matfantinel.moneta.appdata.xml.in
@@ -20,6 +20,7 @@
       <description>
         <li>💰 New currency: Czech Koruna (Marcelo Fantinel | @marfantinel)</li>
         <li>🇫🇷 French Translation (Nathan Bonnemains | @NathanBnm)</li>
+        <li>🇷🇺 Russian Translation (Andrey Sudarikov)</li>
         <li>🎨 Fix colors on non-default themes (Marcelo Fantinel | @marfantinel)</li>
       </description>
     </release>
