--- a/data/com.github.matfantinel.moneta.appdata.xml.in
+++ b/data/com.github.matfantinel.moneta.appdata.xml.in
@@ -16,6 +16,15 @@
     </ul>
   </description>
   <releases>  
+    <release version="1.1.4" date="2020-02-15">
+      <description>
+        <ul>
+          <li>💰 New currency: Hungarian Forint</li>
+          <li>🇪🇦️ Spanish Translation (@manudmz)</li>
+          <li>🇭🇺️ Hungarian Translation (@ovari)</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.1.3" date="2020-01-31">
       <description>
         <ul>
