Forgot something on release note

--- a/data/com.github.matfantinel.moneta.appdata.xml.in
+++ b/data/com.github.matfantinel.moneta.appdata.xml.in
@@ -19,7 +19,7 @@
     <release version="1.1.4" date="2020-02-15">
       <description>
         <ul>
-          <li>💰 New currency: Hungarian Forint</li>
+          <li>💰 New currencies: Mexican Peso and Hungarian Forint</li>
           <li>🇪🇦️ Spanish Translation (@manudmz)</li>
           <li>🇭🇺️ Hungarian Translation (@ovari)</li>
         </ul>
