--- a/data/com.github.matfantinel.moneta.appdata.xml.in
+++ b/data/com.github.matfantinel.moneta.appdata.xml.in
@@ -16,6 +16,14 @@
     </ul>
   </description>
   <releases>  
+    <release version="2.3.0" date="2021-08-09">
+      <description>          
+        <p>elementary OS 6.0 Odin Support</p>
+        <ul>
+          <li>🌓 Support for dark style</li>
+        </ul>
+      </description>
+    </release>
     <release version="2.2.0" date="2020-07-06">
       <description>          
         <p>Moneta's icon has a fresh new look! Plus new translations.</p>
